--- a/styles/style_bd.css
+++ b/styles/style_bd.css
@@ -149,6 +149,10 @@ nav{
     border: none;
 }
 
+body{
+    background-color: rgba(241, 241, 243, 1);
+}
+
 /* baner section */
 .txt{
     width: 47%;
@@ -183,4 +187,41 @@ nav{
     font-size: 56px;
     font-weight: bold;
     margin-bottom: 24px;
+}
+
+/* Card section */
+.title-sec2{
+    font-size: 40px;
+    font-weight: bold;
+}
+.topic{
+    font-size: 20px;
+    font-weight: bold;
+}
+.norm{
+    font-size: 16px;
+    font-weight: normal;
+    color: rgba(14, 14, 14, 0.7);
+}
+.card{
+    width: 23.5%;
+    height: 244px;
+    border: none;
+    border-radius: 16px;
+    background-color: rgba(255, 255, 255, 1);
+}
+.container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap:24px;
+    margin-top: 32px;
+    margin-bottom: 80px;
+}
+.crd-img{
+    margin: 24px 214px 24px 24px;
+}
+.crd-txt{
+    margin: 0 24px 24px 24px;
 }
