--- a/styles/style_bd.css
+++ b/styles/style_bd.css
@@ -225,3 +225,106 @@ body{
 .crd-txt{
     margin: 0 24px 24px 24px;
 }
+
+/* vision future section */
+.title-future{
+    font-size: 40px;
+    font-weight: bold;
+    padding-bottom: 24px;
+}
+.dr-para{
+    font-size: 16px;
+    font-weight: normal;
+    color: rgba(14, 14, 14, 0.8);
+}
+.dr-para2{
+    font-size: 16px;
+    font-weight: normal;
+    color: rgba(14, 14, 14, 0.6);
+}
+.dr-title{
+    font-size: 20px;
+    line-height: 24px;
+}
+.future-card-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    margin-bottom: 32px;
+}
+.future-card1{
+    width: 33%;
+    height: 325px;
+    border: none;
+    border-radius: 16px;
+    padding-top: 32px;
+    padding-left: 32px; 
+    background-color: rgba(84, 144, 245, 0.2);   
+}
+.future-card2{
+    width: 33%;
+    height: 325px;
+    border: none;
+    border-radius: 16px;
+    padding-top: 32px;
+    padding-left: 32px;   
+    background-color: rgba(198, 228, 214, 1);
+}
+.future-card3{
+    width: 33%;
+    height: 325px;
+    border: none;
+    border-radius: 16px;
+    padding-top: 32px;
+    padding-left: 32px; 
+    background-color: rgba(247, 235, 207, 1);  
+}
+.fu-img{
+    padding-bottom: 24px;
+}
+.dr-topic{
+    padding-bottom: 12px;
+    font-size: 20px;
+    font-weight: bold;
+}
+sub{
+    margin-top: 24px;
+}
+.btn-card1{
+    width: 122px;
+    height: 41px;
+    border-radius: 8px;
+    background-color: rgba(84, 144, 245, 1);
+    border: none;
+    color: rgba(255, 255, 255, 1);
+    margin-top: 24px;
+}
+.btn-card2{
+    width: 122px;
+    height: 41px;
+    border-radius: 8px;
+    background-color: rgba(9, 161, 92, 1);
+    border: none;
+    color: rgba(255, 255, 255, 1);
+    margin-top: 48px;
+}
+.btn-card3{
+    width: 122px;
+    height: 41px;
+    border-radius: 8px;
+    background-color: rgba(255, 194, 57, 1);
+    border: none;
+    color: rgba(255, 255, 255, 1);
+    margin-top: 34px;
+}
+.dr-txt{
+    width: 100%;
+    height: 256px;
+    border-radius: 16px;
+    background-color: rgba(255, 255, 255, 1);
+}
+.sub{
+    padding-bottom: 32px;
+}
