--- a/styles/style_bd.css
+++ b/styles/style_bd.css
@@ -197,6 +197,7 @@ body{
 .topic{
     font-size: 20px;
     font-weight: bold;
+    margin-bottom: 12px;
 }
 .norm{
     font-size: 16px;
@@ -205,10 +206,18 @@ body{
 }
 .card{
     width: 23.5%;
-    height: 244px;
-    border: none;
+    height: 255px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
     border-radius: 16px;
     background-color: rgba(255, 255, 255, 1);
+}
+.card4{
+  width: 23.5%;
+  height: 255px;
+  border: 1px solid rgba(14, 14, 14, 0.15);
+  border-radius: 16px;
+  background-color: rgba(255, 255, 255, 1);
+  margin-right: -24px;
 }
 .container{
     display: flex;
@@ -236,11 +245,13 @@ body{
     font-size: 16px;
     font-weight: normal;
     color: rgba(14, 14, 14, 0.8);
+    margin-bottom: 12px;
 }
 .dr-para2{
     font-size: 16px;
     font-weight: normal;
     color: rgba(14, 14, 14, 0.6);
+    margin-bottom: 4px;
 }
 .dr-title{
     font-size: 20px;
@@ -279,7 +290,8 @@ body{
     border-radius: 16px;
     padding-top: 32px;
     padding-left: 32px; 
-    background-color: rgba(247, 235, 207, 1);  
+    background-color: rgba(247, 235, 207, 1); 
+    margin-right: -24px; 
 }
 .fu-img{
     padding-bottom: 24px;
@@ -320,11 +332,24 @@ sub{
     margin-top: 34px;
 }
 .dr-txt{
-    width: 100%;
-    height: 256px;
-    border-radius: 16px;
-    background-color: rgba(255, 255, 255, 1);
+    width: 95%;
+    height: 150px;
+    margin-top: 25px;
+    font-size: 16px;
 }
 .sub{
     padding-bottom: 32px;
+}
+.statement{
+  width: 100%;
+  height: 246px;
+  border: 1px solid rgba(14, 14, 14, 0.15);
+  border-radius: 16px;
+  background-color: rgba(255, 255, 255, 1);
+  background-image: url(../assets/quote-bg.png);
+  background-repeat: no-repeat;
+  background-position: top left;
+  padding-top: 25px;
+  padding-left: 24px;
+  background-origin: content-box;
 }
