--- a/styles/style_bd.css
+++ b/styles/style_bd.css
@@ -402,3 +402,88 @@ table, td, tr{
 .opinion{
   margin-bottom: 80px;
 }
+
+/* News part */
+.news1-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  height: 402px;
+  margin-bottom: 24px;
+  /* align-items:normal; */
+  /* text-align:justify; */
+}
+.news-text-1{
+  width: 744px;
+  height: 290px;
+  margin: 56px 48px 56px 32px;
+}
+.pic{
+  align-items: center;
+  margin: 48px 32px 48px 48px;
+  border-radius: 24px;
+  width: 408px;
+  height: 306px;
+}
+.news-title{
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 24px;
+}
+.news-para{
+  font-size: 16px;
+  font-weight: normal;
+  color: rgba(14, 14, 14, 0.7);
+  margin-bottom: 32px;
+}
+.news1-title{
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 12px;
+}
+.al{
+  width: 134px;
+  height: 40px;
+  margin-bottom: 12px;
+}
+.news1-time{
+  font-size: 16px;
+  font-weight: normal;
+  margin-bottom: 12px;
+  color: rgba(14, 14, 14, 0.7);
+}
+.news1-sub{
+  font-size: 16px;
+  font-weight: normal;
+  margin-bottom: 32px;
+  color: rgba(14, 14, 14, 0.7);
+}
+.btn-news{
+  font-size: 18px;
+  color: rgba(255, 255, 255, 1);
+  width: 139px;
+  height: 48px;
+  background-color: rgba(0, 106, 80, 1);
+  border-radius: 8px;
+  border: none;
+}
+.news2-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 24px;
+}
+/* .news2-title{
+  margin: ;
+} */
+.news2-text{
+  margin: 56px 32px 56px 48px;
+}
+.pic2{
+  align-items: center;
+  margin: 48px 48px 48px 32px;
+  border-radius: 24px;
+  width: 408px;
+  height: 306px;
+}
