--- a/styles/style_bd.css
+++ b/styles/style_bd.css
@@ -133,6 +133,11 @@ nav{
     border: 1px solid rgba(0, 106, 80, 1);
     font-size: 18px;
     color: rgba(0, 106, 80, 1);
+    cursor: pointer;
+}
+.btn-nav:hover{
+  background-color: rgb(146, 241, 146);
+  color: black;
 }
 .body-margin{
     margin-left: 160px;
@@ -148,6 +153,11 @@ nav{
     background-color: rgba(0, 106, 80, 1);
     border-radius: 8px;
     border: none;
+    cursor: pointer;
+}
+.btn:hover{
+  background-color: rgb(245, 61, 61);
+  color: black;
 }
 
 body{
@@ -313,6 +323,11 @@ sub{
     border: none;
     color: rgba(255, 255, 255, 1);
     margin-top: 24px;
+    cursor: pointer;
+}
+.btn-card1:hover{
+  background-color: rgb(255, 255, 255);
+  color: black;
 }
 .btn-card2{
     width: 122px;
@@ -322,6 +337,11 @@ sub{
     border: none;
     color: rgba(255, 255, 255, 1);
     margin-top: 48px;
+    cursor: pointer;
+}
+.btn-card2:hover{
+  background-color: aquamarine;
+  color: black;
 }
 .btn-card3{
     width: 122px;
@@ -331,6 +351,11 @@ sub{
     border: none;
     color: rgba(255, 255, 255, 1);
     margin-top: 34px;
+    cursor: pointer;
+}
+.btn-card3:hover{
+  background-color: lightgreen;
+  color: black;
 }
 .dr-txt{
     width: 95%;
@@ -468,6 +493,11 @@ table, td, tr{
   background-color: rgba(0, 106, 80, 1);
   border-radius: 8px;
   border: none;
+  cursor: pointer;
+}
+.btn-news:hover{
+  background-color: greenyellow;
+  color: black;
 }
 .news2-container{
   display: flex;
@@ -504,6 +534,11 @@ table, td, tr{
   padding: 40px;
   border: 1px solid rgba(14, 14, 14, 0.15);
   border-radius: 16px;
+  cursor: pointer;
+}
+.donate-card:hover{
+  background-color: midnightblue;
+  color: aqua;
 }
 .donation-cards{
   display: flex;
@@ -544,7 +579,11 @@ table, td, tr{
   border-radius: 8px;
   border: none;
   margin-top: 32px;
-  
+  cursor: pointer;
+}
+.submit1:hover{
+  background-color: green;
+  color: red;
 }
 .sub-dona{
 
@@ -602,6 +641,11 @@ table, td, tr{
   font-size: 18px;
   color: rgba(255, 255, 255, 1);
   border-radius: 0 8px 8px 0;
+  cursor: pointer;
+}
+.subscribe:hover{
+  background-color:  black;
+  color:  white;
 }
 .text-letter{
   display: flex;
@@ -611,4 +655,32 @@ table, td, tr{
   text-align: center;
   width: 50%;
   margin: 0 auto;
+}
+/* footer section */
+.list{
+  list-style: none;
+}
+.foot{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.icons{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 23px;
+  margin-top:32px;
+  margin-bottom: 50px;
+}
+.last-h{
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 32px;
+}
+.hr{
+  width: 1122px;
+  color: rgba(14, 14, 14, 0.1);
 }
